@@ -2,7 +2,8 @@
 
 2006-12-05	Konstantin V. Arkhipov
 
-	* main/Flow/EditorController.class.php: pre/post-command hooks added.
+	* main/Flow/MonolithicController.class.php: hooks-based editor
+	implemented.
 
 	* core/Form/Primitives/: Timestamp' stuff separated from
 	PrimitiveDate; this one breaks BC: you must replace all
